--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     
   </body>
   <script language="javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+  <script src="feature-x.js"></script>
   <script src="pong.js"></script>
 </html>
